--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,11 +1,8 @@
 backend:
-  name: github
-  repo: 1biz/mundana-theme-jekyll
+  name: git-gateway
   branch: master
-  app_id: Ov23liyuoOqJu1RKRdCb
-  auth_scope: "repo"
-media_folder: "assets/images"
-public_folder: "/assets/images"
+  media_folder: "assets/images"
+  public_folder: "/assets/images"
 collections:
   - name: "posts"
     label: "Blog Posts"
