--- a/_config.yml
+++ b/_config.yml
@@ -20,20 +20,20 @@ plugins:
   
 authors:
     sal:
-      name:           Sal
-      site:           https://www.wowthemes.net
+      name:           Nguyễn Văn Anh
+      site:           https://www.vietnamscoop.com
       avatar:         /assets/images/avatar1.jpg
-      bio:            "Hi, I am Sal, the author of Mundana, the theme you're currently previewing. I hope you like it!"
-      email:          wowthemesnet@gmail.com
-      twitter:        https://twitter.com/wowthemesnet
+      bio:            "Nhà báo chuyên về công nghệ và xã hội."
+      email:          hi@vietnamscoop.com
+      X:              https://x.com/VietnamScoop
 
     jane:
-      name:           Jane
-      site:           https://www.wowthemes.net
+      name:           Trần Thùy Linh
+      site:           https://vietnam.net24.news
       avatar:         /assets/images/avatar2.jpg
-      bio:            "Blogger, fashionista, love to explore new ideas and write on my morning coffee!"
-      email:          fakemail@gmail.com
-      twitter:        https://twitter.com/wowthemesnet
+      bio:            "Biên tập viên và nhà nghiên cứu văn hóa."
+      email:          
+      X:               
  
 # Defaults
 defaults:
