--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: 'Viet Web'
+name: 'Viet News'
 description: 'Phương tiện truyền thông Việt Nam'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
