--- a/_config.yml
+++ b/_config.yml
@@ -25,15 +25,15 @@ authors:
       avatar:         "https://i.ibb.co/x8KRqM7f/avatar1.jpg"
       bio:            "Nhà báo chuyên về công nghệ và xã hội."
       email:          hi@vietnamscoop.com
-      X:              https://x.com/VietnamScoop
+      twitter:        https://x.com/VietnamScoop
 
     jane:
       name:           Trần Thùy Linh
       site:           https://vietnam.net24.news
       avatar:         "https://i.ibb.co/M5KPyXzv/avatar2.jpg"
       bio:            "Biên tập viên và nhà nghiên cứu văn hóa."
-      email:          
-      X:               
+      email:          vip@vietnamscoop.com
+      twitter:        https://x.com/VietnamScoop    
  
 # Defaults
 defaults:
